--- a/_posts/2020-05-21-ctflearn227.md
+++ b/_posts/2020-05-21-ctflearn227.md
@@ -41,7 +41,7 @@ Now let's input our ciphered message and check the *Output* log. It lists every 
 ## Method 2: CyberChef's "Magic" Operation
 *[Magic](https://github.com/gchq/CyberChef/wiki/Automatic-detection-of-encoded-data-using-CyberChef-Magic)* is a really powerful operation proper to [CyberChef](https://gchq.github.io/CyberChef/). Even if its name says so, it is not doing proper magic.  Actually, it's doing multiple tests and calculations to automatically find the encoding of the input data.
 
-In the *Operations* menu, search for "Magic". Take the *Magic* operation and drag it into *Recipe* box. Turn the intensive mode on and set the depth to 29 or higher (because our input is 29 characters long).
+In the *Operations* menu, search for "Magic". Take the *Magic* operation and drag it into *Recipe* box. Turn the intensive mode on and let the depth as it is (the depth signifies the maximum number of levels of recursion, in this case, 1 is enough).
 
 Now let's input our ciphered message and check the nice table which is displayed for us in the *Output* box.
 ![Magic Without RegEx](https://i.imgur.com/Vc9Iqvu.png)
