Wrong images' links in latest article

--- a/_posts/2020-12-03-ctflearn887.md
+++ b/_posts/2020-12-03-ctflearn887.md
@@ -24,7 +24,8 @@ tags:
 Cryptography, 90 points
 > Hello! My friend Fari send me this suspecious message: 'MQDzqdor{Ix4Oa41W_1F_B00h_m1YlqPpPP}' and photo.png. Help me decrypt this!
 
-![photo.png](https://imgur.com/rHR2vQD)
+![photo.png](https://i.imgur.com/rHR2vQD.png)
+
 *photo.png*
 
 # Solution
@@ -32,19 +33,19 @@ When you have an unknown ciphertext and you're looking for the right cipher to u
 
 As our first try, let's input the raw ciphertext and hope for good results.
 
-![Boxentriq 1](https://imgur.com/BvXKb9Q)
+![Boxentriq 1](https://i.imgur.com/BvXKb9Q.png)
 
 Unfortunately, as you can see in the screenshot above, the site has not found the format it could be in. This may be due to some characters not being in the cipher's alphabet (for instance, the curly braces). Actually, in *photo.png*, only letters are used. Thus, we could select the *Letters Only* option in *Text Options...* to remove every character other than letters. This could solve our problem.
 
-![Boxentriq 2](https://imgur.com/cqdzV5E)
+![Boxentriq 2](https://i.imgur.com/cqdzV5E.png)
 
 This time, we've got a result: Base64 Encoding! Let's try it out...
 
-![Base64 fail](https://imgur.com/YpK1yzs)
+![Base64 fail](https://i.imgur.com/YpK1yzs.png)
 
 Unfortunately, as the image above shows, this text doesn't look to be simply base64 encoded. Let's continue our research. In *photo.png*, we can notice all letters are uppercase. This could mean that the case doesn't matter in that cipher, thus we could try putting all letters in the ciphertext in uppercase too. We can achieve this by using the *UPPER* option in *Text Options...*. 
 
-![Boxentriq 3](https://imgur.com/feU5DUu)
+![Boxentriq 3](https://i.imgur.com/feU5DUu.png)
 
 This time, we have got a more interesting, but seemingly quite vague result. Indeed, we are given 11 possible different options, including the Unknown Cipher seen before. By taking a quick look at each one of them, we can find that the [Playfair Cipher](https://en.wikipedia.org/wiki/Playfair_cipher) uses a grid similar to *photo.png* as key. Let's go along with this cipher by digging deeper into it.
 
@@ -63,4 +64,4 @@ The [Playfair Cipher](https://en.wikipedia.org/wiki/Playfair_cipher) is an encry
 ## Decrypting the Ciphertext
 With all that said, we could now use the integrated [Playfair Cipher Decoder in Boxentriq itself](https://www.boxentriq.com/code-breaking/playfair-cipher) to decode our given ciphertext. For that, we will first need to trigger the *Decrypt* mode and enter the letters from the grid of *photo.png* in the *Encryption key* input field (from left to right, top to bottom). Finally, enter the ciphertext and you will get the flag!
 
-![Decryption](https://imgur.com/0Mwnw2f)
+![Decryption](https://i.imgur.com/0Mwnw2f.png)
